--- a/shopmanager/shopback/trades/templates/product_analysis/analysis_base.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/analysis_base.html
@@ -16,18 +16,61 @@
     {% endblock %}
 </head>
 <body>
+<div style="margin-bottom: 70px">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/trades/product_analysis/">产品分析 <span class="sr-only">(current)</span></a>
+                </li>
+                <li><a href="/trades/xlmm_product_analysis/">妈妈订单分析</a></li>
+                <li><a href="/trades/product_analysis_top100/">销售TOP100</a></li>
+                <li><a href="/trades/product_analysis_collect_top100/">库存TOP100</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
 <div class="container">
     {% block container %}
 
 
     {% endblock %}
 </div>
+
 {% block test %}
 
 {% endblock %}
 
 {% block tail_script %}
 {% endblock %}
-
+<script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
+<script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $('#mytable').dataTable({
+        //"bJQueryUI": true,
+        "bAutoWidth": false, //自适应宽度
+        "aaSorting": [[2, "desc"]],
+        "iDisplayLength": 50,
+        "aLengthMenu": [[20, 50, -1], [20, 50, "All"]],
+        //"bInfo":true,
+        //"sPaginationType": "full_numbers",
+        //"sDom": '<"H"Tfr>t<"F"ip>',
+        "oLanguage": {
+            "sLengthMenu": "_MENU_ 条",
+            "sZeroRecords": "抱歉， 没有找到",
+            "sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条",
+            "sInfoEmpty": "没有数据",
+            "sSearch": "搜索",
+            "sInfoFiltered": "(从 _MAX_ 条数据中检索)",
+            "oPaginate": {
+                "sFirst": "首页",
+                "sPrevious": "前一页",
+                "sNext": "后一页",
+                "sLast": "尾页"
+            },
+            "sZeroRecords": "没有检索到数据",
+            "sProcessing": "<img src='/static/img/loading.gif' />"
+        }
+    });
+</script>
 </body>
 </html>
