--- a/shopmanager/shopback/trades/templates/product_analysis/product_analysis.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/product_analysis.html
@@ -12,17 +12,12 @@
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
     </style>
-    <script type="text/javascript">
 
-    </script>
-    <style type="text/css">
-
-    </style>
 {% endblock %}
 
 {% block container %}
     <div class="container">
-        <h3>产品分析</h3>
+        <h3>产品分析(TOP50)</h3>
     </div>
     <div>
         <div class="col-xs-4">
@@ -60,35 +55,6 @@
 {% endblock %}
 
 {% block tail_script %}
-    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
-    <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $('#mytable').dataTable({
-            //"bJQueryUI": true,
-            "bAutoWidth": false, //自适应宽度
-            "aaSorting": [[2, "desc"]],
-            "iDisplayLength": 50,
-            "aLengthMenu": [[20, 50, -1], [20, 50, "All"]],
-            //"bInfo":true,
-            //"sPaginationType": "full_numbers",
-            //"sDom": '<"H"Tfr>t<"F"ip>',
-            "oLanguage": {
-                "sLengthMenu": "_MENU_ 条",
-                "sZeroRecords": "抱歉， 没有找到",
-                "sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条",
-                "sInfoEmpty": "没有数据",
-                "sSearch": "搜索",
-                "sInfoFiltered": "(从 _MAX_ 条数据中检索)",
-                "oPaginate": {
-                    "sFirst": "首页",
-                    "sPrevious": "前一页",
-                    "sNext": "后一页",
-                    "sLast": "尾页"
-                },
-                "sZeroRecords": "没有检索到数据",
-                "sProcessing": "<img src='/static/img/loading.gif' />"
-            }
-        });
-    </script>
+
 {% endblock %}
 
