--- a/shopmanager/shopback/trades/templates/product_analysis/product_analysis.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/product_analysis.html
@@ -16,8 +16,10 @@
 {% endblock %}
 
 {% block container %}
-    <div class="container">
-        <h3>产品分析(TOP50)</h3>
+    <div class="container page-header">
+        <h3>产品分析
+            <small>(TOP 50/月)</small>
+        </h3>
     </div>
     <div>
         <div class="col-xs-4">
