--- a/shopmanager/shopback/trades/templates/product_analysis/product_analysis_top100.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/product_analysis_top100.html
@@ -16,8 +16,10 @@
 {% endblock %}
 
 {% block container %}
-    <div class="container">
-        <h3>产品销售(周top100)</h3>
+    <div class="container page-header">
+        <h3>产品销售
+            <small>(周top100)</small>
+        </h3>
     </div>
     <div>
         <div class="col-xs-4">
