--- a/shopmanager/shopback/trades/templates/product_analysis/xlmm_pro_analysis.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/xlmm_pro_analysis.html
@@ -16,8 +16,10 @@
 {% endblock %}
 
 {% block container %}
-    <div class="container">
-        <h3>妈妈订单分析</h3>
+    <div class="container page-header">
+        <h3>妈妈订单分析
+            <small>(月)</small>
+        </h3>
     </div>
     <div>
         <div class="col-xs-4">
