[xlmm][flashsale][dinghuo] supply add

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_product.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_product.html
@@ -13,6 +13,7 @@
             <thead>
             <th>商品外部编码</th>
             <th>商品上架时间</th>
+            <th>供应商</th>
             <th>销售数量</th>
             <th>订货数量</th>
             <th>次品数量</th>
@@ -27,6 +28,7 @@
                 <tr>
                     <td>{{ data.product_id }}</td>
                     <td>{{ data.sale_time }}</td>
+                    <td>{{ data.supplier_shop }}</td>
                     <td>{{ data.sale_num }}</td>
                     <td>{{ data.ding_huo_num }}</td>
                     <td>{{ data.inferior_num }}</td>
