[flashsale][task_settings]pull envelop

--- a/shopmanager/flashsale/pay/templates/pay/address_block.html
+++ b/shopmanager/flashsale/pay/templates/pay/address_block.html
@@ -50,12 +50,14 @@
 	      <textarea class="form-control" name="receiver_address" id="inputReceiverAddress" row="2" >{{ receiver_address }}</textarea>
 	    </div>
 	  </div>
+	  {% comment %}
 	  <div class="form-group">
 	    <label for="inputReceiverZipCode" class="col-xs-3 control-label">邮政编码</label>
 	    <div class="col-xs-9">
 	      <input type="text" name="receiver_zip" class="form-control" id="inputReceiverZipCode" value="{{ receiver_zip }}">
 	    </div>
 	  </div>
+	  {% endcomment %}
 	  <div class="form-group">
 	    <div class="col-xs-offset-3 col-xs-9">
 	      <div class="checkbox">
