[xlmm][flashsale][dinghuo] add supplier stats

--- a/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/dailysupplychainstatsorder/change_list.html
+++ b/shopmanager/flashsale/dinghuo/templates/admin/dinghuo/dailysupplychainstatsorder/change_list.html
@@ -64,6 +64,11 @@
                             </a>
                         </li>
                         <li>
+                            <a href="/sale/dinghuo/stats_supplier/" class="addlink" target="_blank" >
+                                小鹿美美供应商分析
+                            </a>
+                        </li>
+                        <li>
                             <a href="{% url cl.opts|admin_urlname:'add' %}{% if is_popup %}?_popup=1{% endif %}"
                                class="addlink">
                                 {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
