--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -72,6 +72,11 @@
 		  <div class="col-xs-3 glyphicon glyphicon-chevron-right" style="margin-top:20px;"></div>
 		</div>
 		<div class="row pending">
+		  {% if abnormal_cash > 10 %}
+		  <div class="col-xs-7">
+		  <h6>账户异常结算金额:<span class="text-muted">￥{{ abnormal_cash }}</span></h6>
+		  </div>
+		  {% endif %}
 		  <div class="col-xs-9">
 		  <h6>待确认金额:<span class="text-danger">￥{{ pending_value }}</span></h6>
 		  </div>
