--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_supplier.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_supplier.html
@@ -1,13 +1,30 @@
 {% extends "dinghuo/dinghuo_base.html" %}
 {% block title %}所有商品统计{% endblock %}
 {% block head_script %}
-    <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'/>
     <style type="text/css" title="currentStyle">
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
     </style>
+
+
 {% endblock %}
 {% block container %}
+    <form class="form-horizontal" role="form" method="GET" action="/sale/dinghuo/stats_supplier/">
+        <div class="row" style="margin-top: 40px">
+            <div class="col-xs-4">
+                <label class="control-label" for="df">开始日期:</label>
+                <input type="text" id="f_datepicker" name="df" class="form-control datepicker"
+                       value="{{ start_date }}"/>
+            </div>
+            <div class="col-xs-4">
+                <label class="control-label" for="dt">结束日期:</label>
+                <input type="text" id="t_datepicker" name="dt" class="form-control datepicker" value="{{ end_date }}"/>
+            </div>
+            <div class="col-xs-1">
+                <input type="submit" value="查询" class="btn btn-primary" style="margin-top:27px;"/>
+            </div>
+        </div>
+    </form>
     <div class="row" style="margin-top: 40px">
         <table class="table table-bordered" id="data-table">
             <thead>
@@ -34,15 +51,22 @@
     </div>
 {% endblock %}
 {% block tail_script %}
-    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
+    <link href="{{ STATIC_URL }}jquery-timepicker-addon/timepicker/jquery-ui-timepicker-addon.css" type="text/css"/>
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}jquery-visualize-plugin/visualize.jQuery.css"/>
+    <script src="{{ STATIC_URL }}jquery/jquery-ui-1.8.13.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}jquery-visualize-plugin/visualize.jQuery.js"></script>
+    <script src="{{ STATIC_URL }}jquery-timepicker-addon/timepicker/jquery-ui-timepicker-addon.js"
+            type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}jquery-timepicker-addon/js/jquery-ui-timepicker-zh-CN.js"
+            type="text/javascript"></script>
     <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $('#data-table').dataTable({
             //"bJQueryUI": true,
             "bAutoWidth": false, //自适应宽度
-            "aaSorting": [[1, "asc"]],
-            "iDisplayLength": -1,
-            "aLengthMenu": [[20, 50, 100, -1], [20, 50, 100, "All"]],
+            "aaSorting": [[1, "desc"]],
+            "iDisplayLength": 30,
+            "aLengthMenu": [[30, 50, 100, -1], [30, 50, 100, "All"]],
             //"bInfo":true,
             //"sPaginationType": "full_numbers",
             //"sDom": '<"H"Tfr>t<"F"ip>',
@@ -62,6 +86,20 @@
                 "sZeroRecords": "没有检索到数据",
                 "sProcessing": "<img src='/static/img/loading.gif' />"
             }
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(function () {
+            console.log("eeeeeee");
+            $("#f_datepicker").datepicker({
+                dateFormat: "yy-mm-dd"
+            });
+
+            $("#t_datepicker").datepicker({
+                timeFormat: "HH:mm:ss",
+                dateFormat: "yy-mm-dd"
+            });
         });
     </script>
 {% endblock %}
