--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_supplier.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_supplier.html
@@ -1,5 +1,5 @@
 {% extends "dinghuo/dinghuo_base.html" %}
-{% block title %}所有商品统计{% endblock %}
+{% block title %}供应商统计{% endblock %}
 {% block head_script %}
     <style type="text/css" title="currentStyle">
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
@@ -20,6 +20,21 @@
                 <label class="control-label" for="dt">结束日期:</label>
                 <input type="text" id="t_datepicker" name="dt" class="form-control datepicker" value="{{ end_date }}"/>
             </div>
+            <div class="col-xs-2">
+                <label class="control-label" for="groupname">查看分组:</label>
+                <select class="form-control " name="groupname" id="groupname_id">
+                    <option value="0" {% ifequal group_name 0 %} selected="selected" {% endifequal %}>所有</option>
+                    <option class="btn-info" {% ifequal group_name 1 %} selected="selected" {% endifequal %} value="1">
+                        采购A
+                    </option>
+                    <option class="btn-warning" {% ifequal group_name 2 %} selected="selected" {% endifequal %}value="2">
+                        采购B
+                    </option>
+                    <option class="btn-success" {% ifequal group_name 3 %} selected="selected" {% endifequal %}value="3">
+                        采购C
+                    </option>
+                </select>
+            </div>
             <div class="col-xs-1">
                 <input type="submit" value="查询" class="btn btn-primary" style="margin-top:27px;"/>
             </div>
@@ -28,6 +43,7 @@
     <div class="row" style="margin-top: 40px">
         <table class="table table-bordered" id="data-table">
             <thead>
+            <th>组别</th>
             <th>供应商</th>
             <th>销售数量</th>
             <th>销售额</th>
@@ -38,6 +54,7 @@
             <tbody>
             {% for data in all_data %}
                 <tr>
+                    <td>{{ data.6 }}</td>
                     <td>{{ data.0 }}</td>
                     <td>{{ data.2 }}</td>
                     <td>{{ data.3 }}</td>
