[xlmm][flashsale][point] admin modify

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_point.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_point.html
@@ -37,12 +37,12 @@
             <tr>
                 <td>采购B</td>
                 <td>{{ b_ding_huo_point }}</td>
-                <td>{{ a_sale_point }}</td>
+                <td>{{ b_sale_point }}</td>
             </tr>
             <tr>
                 <td>采购C</td>
                 <td>{{ c_ding_huo_point }}</td>
-                <td>{{ a_sale_point }}</td>
+                <td>{{ c_sale_point }}</td>
             </tr>
             </tbody>
         </table>
