[pay][xiaolumm]fix views and models

--- a/shopmanager/flashsale/pay/templates/pay/mproduct.html
+++ b/shopmanager/flashsale/pay/templates/pay/mproduct.html
@@ -400,6 +400,7 @@ function hideLoader()
         
         var params = {"pid":$('#id_product').val(),
                       "sid":size,
+                      "format":"html",
                       "num":amount}
                       //"csrfmiddlewaretoken":csrf_token};
         window.location.href = '/mm/orderbuy/?'+$.param(params);
