[pay][restpro][xiaolumm]

--- a/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
@@ -54,7 +54,7 @@
 	  </div>
 	  </form>
 	  <ul id="id-cashout-notice" style="color:red;margin-top:6px;{% if cashout < 1 %}display:none{% endif %}" class="list-group">
-	    <li class="list-group-item">提现申请已提交！<br/>请微信加微客服 <b>18516655836</b> 审核提现申请，提现将以发放微信微红包方式完成。</li>
+	    <li class="list-group-item">提现申请已提交！<br/>请微信加微客服 <b>{{ kefu_mobile }}</b> 审核提现申请，提现将以发放微信微红包方式完成。</li>
 	  </ul>
 	
 	  <div style="margin-top:20px">
