[xlmm][flashsale][dinghuo] add changedetail to product href

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -348,7 +348,7 @@
 
             {% for order in orderdetails %}
                 <tr id="orderdetail_{{ forloop.counter }}">
-                    <td>{{ order.outer_id }}</td>
+                    <td><a href="/admin/items/product/?q={{ order.outer_id|slice:":9" }}" target="_blank">{{ order.outer_id }}</a></td>
                     <td>{{ order.product_name }}</td>
                     <td><img src="{{ order.pic_path }}" width="60px" height="60px" class="img-circle"></td>
                     <td>{{ order.product_chicun }}</td>
