[xlmm][flashsale][dinghuo] fix display errot

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_point.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/data_of_point.html
@@ -112,11 +112,11 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">采购C<b
                             class="caret bottom-up"></b></a>
                     <ul class="dropdown-menu bottom-up pull-right">
-                        <li><span onclick="ajax_data(3,0)">所有</span></li>
+                        <li onclick="ajax_data(3,0)"><span>所有</span></li>
                         <li class="divider"></li>
-                        <li><span onclick="ajax_data(3,1)">到货</span></li>
+                        <li onclick="ajax_data(3,1)"><span >到货</span></li>
                         <li class="divider"></li>
-                        <li><span onclick="ajax_data(3,2)">销售</span></li>
+                        <li onclick="ajax_data(3,2)"><span>销售</span></li>
                     </ul>
                 </li>
             </ul>
