--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/daily_work.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/daily_work.html
@@ -144,7 +144,7 @@
         <div class='loading-container'>
             <h1 id='loading-app-name'>小鹿美美</h1>
 
-            <h3><span id='loading-slogan'>专为小鹿美美买手打造的 大货进步查询系统</span></h3>
+            <h3><span id='loading-slogan'>专为小鹿美美买手打造的 大货进度查询系统</span></h3>
 
             <p id='loading-text'></p>
 
