--- a/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_cashout.html
@@ -261,7 +261,7 @@
 	        $("#id-submit-message")[0].innerHTML = "输入金额错误！请输入整数金额。";
 	      }
             if (res["code"] == 3) {
-	        $("#id-submit-message")[0].innerHTML = "输入金小于20或者大于200！请输入整数金额。";
+	        $("#id-submit-message")[0].innerHTML = "请输入金额20到200范围内(含20，200)！";
 	      }
 	    };
 	    
